Bug 514688 - When using a touchscreen in replica mode with non-matching aspect ratios input positions are not adjusted
Summary: When using a touchscreen in replica mode with non-matching aspect ratios inpu...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-16 11:56 UTC by David Edmundson
Modified: 2026-05-01 18:56 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2026-01-16 11:56:55 UTC
With non matching resolutions the video is letter-boxed, input is not, meaning pressing on the screen doesn't match up properly.

Verified with the "show touch" visualisation.
Comment 1 Bug Janitor Service 2026-01-28 19:22:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8720
Comment 2 David Edmundson 2026-04-29 19:32:21 UTC
Git commit 39530b81317851cf0d8d081637245676969f1047 by David Edmundson.
Committed on 29/04/2026 at 18:57.
Pushed by davidedmundson into branch 'master'.

input: Map devices to device outputs, not logical

An input device is semantically associated with a physical device, no
matter the screen replication.

This fixes mapping a touchscreen when it is cloning a screen of a
different aspect ratio, we want to ignore touch presses on the black
bars.

M  +24   -14   src/backends/libinput/connection.cpp
M  +9    -8    src/backends/libinput/device.cpp
M  +4    -3    src/backends/libinput/device.h
M  +1    -1    src/workspace.cpp
M  +1    -1    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/39530b81317851cf0d8d081637245676969f1047
Comment 3 David Edmundson 2026-04-29 20:52:08 UTC
Git commit 3bfc4de04c479b355b641c12e8cdd9bc29d7d0a2 by David Edmundson.
Committed on 29/04/2026 at 19:45.
Pushed by davidedmundson into branch 'Plasma/6.6'.

input: Map devices to device outputs, not logical

An input device is semantically associated with a physical device, no
matter the screen replication.

This fixes mapping a touchscreen when it is cloning a screen of a
different aspect ratio, we want to ignore touch presses on the black
bars.


(cherry picked from commit 39530b81317851cf0d8d081637245676969f1047)

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +24   -14   src/backends/libinput/connection.cpp
M  +9    -8    src/backends/libinput/device.cpp
M  +4    -3    src/backends/libinput/device.h
M  +1    -1    src/workspace.cpp
M  +1    -1    src/workspace.h

https://invent.kde.org/plasma/kwin/-/commit/3bfc4de04c479b355b641c12e8cdd9bc29d7d0a2