input: Map devices to device outputs, not logical

An input device is semantically associated with a physical device, no
matter the screen replication.

This fixes mapping a touchscreen when it is cloning a screen of a
different aspect ratio, we want to ignore touch presses on the black
bars.

BUG: 514688