src/backends/libinput/connection.cpp
@@ -8,6 +8,7 @@
 */
 #include "connection.h"
 #include "context.h"
+#include "core/backendoutput.h"
 #include "device.h"
 #include "events.h"
 
@@ -189,7 +190,7 @@ void Connection::handleEvent()
 }
 
 #ifndef KWIN_BUILD_TESTING
-QPointF devicePointToGlobalPosition(const QPointF &devicePos, const LogicalOutput *output)
+QPointF devicePointToGlobalPosition(const QPointF &devicePos, const BackendOutput *output)
 {
     QPointF pos = devicePos;
     // TODO: Do we need to handle the flipped cases differently?
@@ -213,8 +214,16 @@ QPointF devicePointToGlobalPosition(const QPointF &devicePos, const LogicalOutpu
     default:
         Q_UNREACHABLE();
     }
-    const auto geo = output->geometryF();
-    pos = geo.topLeft() + pos / output->scale();
+    pos -= output->deviceOffset();
+    pos = pos / output->scale();
+
+    auto logicalOutput = workspace()->findOutput(output);
+    if (!logicalOutput) {
+        qWarning() << "Could not find logical output for " << output;
+        return {};
+    }
+    const QRectF geo = logicalOutput->geometryF();
+    pos += geo.topLeft();
     return QPointF(std::clamp(pos.x(), geo.x(), geo.x() + geo.width() - 1),
                    std::clamp(pos.y(), geo.y(), geo.y() + geo.height() - 1));
 }
@@ -226,10 +235,11 @@ static QPointF tabletToolPosition(TabletToolEvent *event)
     if (event->device()->isMapToWorkspace()) {
         return workspace()->geometry().topLeft() + event->transformedPosition(workspace()->geometry().size());
     } else {
-        LogicalOutput *output = event->device()->output();
-        if (!output) {
-            output = workspace()->activeOutput();
+        BackendOutput *backendOutput = event->device()->output();
+        if (backendOutput) {
+            return devicePointToGlobalPosition(event->transformedPosition(backendOutput->modeSize()), backendOutput);
         }
+        BackendOutput *output = workspace()->activeOutput()->backendOutput();
         return devicePointToGlobalPosition(event->transformedPosition(output->modeSize()), output);
     }
 #else
@@ -624,20 +634,20 @@ void Connection::applyScreenToDevice(Device *device)
         return;
     }
 
-    LogicalOutput *deviceOutput = nullptr;
-    const QList<LogicalOutput *> outputs = workspace()->outputs();
+    BackendOutput *deviceOutput = nullptr;
+    const QList<BackendOutput *> outputs = kwinApp()->outputBackend()->outputs();
 
     // let's try to find a screen for it
     if (!device->outputUuid().isEmpty()) {
         // use the UUID if possible, which is more stable than the output name
-        const auto it = std::ranges::find_if(outputs, [device](LogicalOutput *output) {
+        const auto it = std::ranges::find_if(outputs, [device](BackendOutput *output) {
             return output->uuid() == device->outputUuid();
         });
         deviceOutput = it == outputs.end() ? nullptr : *it;
     }
     if (!deviceOutput && !device->outputName().isEmpty()) {
         // we have an output name, try to find a screen with matching name
-        for (LogicalOutput *output : outputs) {
+        for (BackendOutput *output : outputs) {
             if (output->name() == device->outputName()) {
                 deviceOutput = output;
                 break;
@@ -646,14 +656,14 @@ void Connection::applyScreenToDevice(Device *device)
     }
     if (!deviceOutput && device->isTouch()) {
         // do we have an internal screen?
-        LogicalOutput *internalOutput = nullptr;
-        for (LogicalOutput *output : outputs) {
+        BackendOutput *internalOutput = nullptr;
+        for (BackendOutput *output : outputs) {
             if (output->isInternal()) {
                 internalOutput = output;
                 break;
             }
         }
-        auto testScreenMatches = [device](const LogicalOutput *output) {
+        auto testScreenMatches = [device](const BackendOutput *output) {
             const auto &size = device->size();
             const auto &screenSize = output->physicalSize();
             return std::round(size.width()) == std::round(screenSize.width())
@@ -663,7 +673,7 @@ void Connection::applyScreenToDevice(Device *device)
             deviceOutput = internalOutput;
         }
         // let's compare all screens for size
-        for (LogicalOutput *output : outputs) {
+        for (BackendOutput *output : outputs) {
             if (testScreenMatches(output)) {
                 deviceOutput = output;
                 break;
